--- a/templates/rest_framework/boomerang_base.html
+++ b/templates/rest_framework/boomerang_base.html
@@ -10,6 +10,6 @@
 
 {% block branding %}
     <a class='navbar-brand' rel="nofollow" href='{% url 'index' %}'>
-        Notes
+        Boomerang
     </a>
 {% endblock %}
