--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{% static "twb/css/bootstrap.min.css" %}" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link href="{% static "exampleproject/css/custom.css" %}" rel="stylesheet" type="text/css">
+    <link href="{% static "boomerang/css/custom.css" %}" rel="stylesheet" type="text/css">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'exampleproject_overview' %}">{% trans "Example Project" %}</a>
+          <a class="navbar-brand" href="{% url 'index' %}">{% trans "Boomerang" %}</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
