--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <title>{% if page_title %}{{ page_title }} | {% endif %}{% block site_title %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="{% static "twb/css/bootstrap.min.css" %}" type="text/css">
+    <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="{% static "boomerang/css/custom.css" %}" rel="stylesheet" type="text/css">
@@ -68,7 +68,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{% static "jquery/js/jquery.min.js" %}" type="text/javascript"></script>
-    <script src="{% static "twb/js/bootstrap.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "bootstrap/js/bootstrap.min.js" %}" type="text/javascript"></script>
     {% endblock javascript %}
   </body>
 </html>
