--- a/templates/rest_framework/boomerang_base.html
+++ b/templates/rest_framework/boomerang_base.html
@@ -1,7 +1,9 @@
 {% extends "rest_framework/base.html" %}
 
+{% load static %}
+
 {% block bootstrap_theme %}
-    <link rel="stylesheet" href="/static/default/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css">
 {% endblock %}
 
 {% comment %}
