--- a/templates/rest_framework/boomerang_base.html
+++ b/templates/rest_framework/boomerang_base.html
@@ -1,5 +1,6 @@
 {% extends "rest_framework/base.html" %}
 
+{% load i18n %}
 {% load static %}
 
 {% block bootstrap_theme %}
@@ -11,7 +12,20 @@
 {% endcomment %}
 
 {% block branding %}
-    <a class='navbar-brand' rel="nofollow" href='{% url 'index' %}'>
-        Boomerang
-    </a>
+    <a class='navbar-brand' href='{% url 'index' %}'>Boomerang</a>
+{% endblock %}
+
+{% block userlinks %}
+    {% if user.is_authenticated %}
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-user"></span>&nbsp;{{ user.username }}<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="{% url 'account_email' %}"><span class="glyphicon glyphicon-cog"></span>&nbsp;{% trans "Settings" %}</a></li>
+                <li><a href="{% url 'account_logout' %}"><span class="glyphicon glyphicon-log-out"></span>&nbsp;{% trans "Log Out" %}</a></li>
+            </ul>
+        </li>
+    {% else %}
+        <li><a href="{% url 'account_login' %}"><span class="glyphicon glyphicon-log-in"></span>&nbsp;{% trans "Log In" %}</a></li>
+        <li><a href="{% url 'account_signup' %}"><span class="glyphicon glyphicon-check"></span>&nbsp;{% trans "Sign Up" %}</a></li>
+    {% endif %}
 {% endblock %}
