--- a/templates/rest_framework/boomerang_base.html
+++ b/templates/rest_framework/boomerang_base.html
@@ -3,6 +3,8 @@
 {% load i18n %}
 {% load static %}
 
+{% block title %}{% if name %}{{ name }} - {% endif %}Boomerang{% endblock %}
+
 {% block bootstrap_theme %}
     <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css">
 {% endblock %}
