--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
       <title>{% block head_title %}{% endblock %} - Boomerang</title>
 
       <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css">
+      <link rel="stylesheet" href="{% static "font-awesome/css/font-awesome.min.css" %}" type="text/css">
+      <link rel="stylesheet" href="{% static "bootstrap-social/css/bootstrap-social.css" %}" type="text/css">
     {% endblock head %}
   </head>
 
