--- a/templates/socialaccount/snippets/provider_list.html
+++ b/templates/socialaccount/snippets/provider_list.html
@@ -1,21 +1,16 @@
 {% load socialaccount %}
 
-{% get_providers as socialaccount_providers %}
+</ul>
 
-{% for provider in socialaccount_providers %}
-{% if provider.id == "openid" %}
-{% for brand in provider.get_brands %}
-<li>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
-</li>
-{% endfor %}
-{% endif %}
-<li>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-</li>
-{% endfor %}
+<a class="btn btn-social btn-facebook" href="{% provider_login_url 'facebook' process=process scope=scope auth_params=auth_params %}">
+  <span class="fa fa-facebook"></span> Sign in with Facebook
+</a>
 
+<p/>
+<p/>
+
+<a class="btn btn-social btn-google" href="{% provider_login_url 'google' process=process scope=scope auth_params=auth_params %}">
+  <span class="fa fa-google"></span> Sign in with Google
+</a>
+
+<ul class="socialaccount_providers">
