large social buttons

--- a/templates/socialaccount/snippets/provider_list.html
+++ b/templates/socialaccount/snippets/provider_list.html
@@ -2,14 +2,14 @@
 
 </ul>
 
-<a class="btn btn-social btn-facebook" href="{% provider_login_url 'facebook' process=process scope=scope auth_params=auth_params %}">
+<a class="btn btn-social btn-lg btn-facebook" href="{% provider_login_url 'facebook' process=process scope=scope auth_params=auth_params %}">
   <span class="fa fa-facebook"></span> Sign in with Facebook
 </a>
 
 <p/>
 <p/>
 
-<a class="btn btn-social btn-google" href="{% provider_login_url 'google' process=process scope=scope auth_params=auth_params %}">
+<a class="btn btn-social btn-lg btn-google" href="{% provider_login_url 'google' process=process scope=scope auth_params=auth_params %}">
   <span class="fa fa-google"></span> Sign in with Google
 </a>
 
