--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     {% block head %}
       <title>{% block head_title %}{% endblock %} - Boomerang</title>
 
-      <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css">
+      <link rel="stylesheet" href="{% static "rest_framework/css/bootstrap.min.css" %}" type="text/css">
       <link rel="stylesheet" href="{% static "font-awesome/css/font-awesome.min.css" %}" type="text/css">
       <link rel="stylesheet" href="{% static "bootstrap-social/css/bootstrap-social.css" %}" type="text/css">
     {% endblock head %}
@@ -42,8 +42,8 @@
     </div>
 
     {% block javascript %}
-      <script src="{% static "jquery/js/jquery.min.js" %}" type="text/javascript"></script>
-      <script src="{% static "bootstrap/js/bootstrap.min.js" %}" type="text/javascript"></script>
+      <script src="{% static "rest_framework/js/jquery-1.12.4.min.js" %}" type="text/javascript"></script>
+      <script src="{% static "rest_framework/js/bootstrap.min.js" %}" type="text/javascript"></script>
     {% endblock javascript %}
   </body>
 </html>
