corrected bootstrap css path

--- a/templates/rest_framework/boomerang_base.html
+++ b/templates/rest_framework/boomerang_base.html
@@ -6,7 +6,7 @@
 {% block title %}{% if name %}{{ name }} - {% endif %}Boomerang{% endblock %}
 
 {% block bootstrap_theme %}
-    <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css">
+    <link rel="stylesheet" href="{% static "rest_framework/css/bootstrap.min.css" %}" type="text/css">
 {% endblock %}
 
 {% comment %}
