--- a/templates/rest_framework/boomerang_base.html
+++ b/templates/rest_framework/boomerang_base.html
@@ -7,6 +7,7 @@
 
 {% block bootstrap_theme %}
     <link rel="stylesheet" href="{% static "rest_framework/css/bootstrap.min.css" %}" type="text/css">
+    <link rel="stylesheet" href="{% static "boomerang/css/bootstrap-tweaks.css" %}" type="text/css">
 {% endblock %}
 
 {% comment %}
