--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,15 @@
     </div>
 
     <div class="container">
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-info fade in">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+
       {% block content %}
       {% endblock content %}
     </div>
