--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     {% block head %}
       <title>{% block head_title %}{% endblock %} - Boomerang</title>
 
+      <link rel="icon" href="{% static "boomerang/favicon.ico" %}">
+
       <link rel="stylesheet" href="{% static "rest_framework/css/bootstrap.min.css" %}" type="text/css">
       <link rel="stylesheet" href="{% static "boomerang/css/bootstrap-tweaks.css" %}" type="text/css">
       <link rel="stylesheet" href="{% static "font-awesome/css/font-awesome.min.css" %}" type="text/css">
