--- a/templates/rest_framework/boomerang_base.html
+++ b/templates/rest_framework/boomerang_base.html
@@ -6,6 +6,8 @@
 {% block title %}{% if name %}{{ name }} - {% endif %}Boomerang{% endblock %}
 
 {% block bootstrap_theme %}
+    <link rel="icon" href="{% static "boomerang/favicon.ico" %}">
+
     <link rel="stylesheet" href="{% static "rest_framework/css/bootstrap.min.css" %}" type="text/css">
     <link rel="stylesheet" href="{% static "boomerang/css/bootstrap-tweaks.css" %}" type="text/css">
 {% endblock %}
