--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,12 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-user"></span>&nbsp;{{ user.username }}<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="{% url 'account_email' %}"><span class="glyphicon glyphicon-cog"></span>&nbsp;{% trans "Settings" %}</a></li>
-                <li><a href="{% url 'account_logout' %}"><span class="glyphicon glyphicon-log-out"></span>&nbsp;{% trans "Log Out" %}</a></li>
+                <li><a href="{% url 'account_logout' %}?next={% url 'api-root' %}"><span class="glyphicon glyphicon-log-out"></span>&nbsp;{% trans "Log Out" %}</a></li>
               </ul>
             </li>
           {% else %}
-            <li><a href="{% url 'account_login' %}"><span class="glyphicon glyphicon-log-in"></span>&nbsp;{% trans "Log In" %}</a></li>
-            <li><a href="{% url 'account_signup' %}"><span class="glyphicon glyphicon-check"></span>&nbsp;{% trans "Sign Up" %}</a></li>
+            <li><a href="{% url 'account_login' %}?next={% url 'api-root' %}"><span class="glyphicon glyphicon-log-in"></span>&nbsp;{% trans "Log In" %}</a></li>
+            <li><a href="{% url 'account_signup' %}?next={% url 'api-root' %}"><span class="glyphicon glyphicon-check"></span>&nbsp;{% trans "Sign Up" %}</a></li>
           {% endif %}
         </ul>
       </div>
