--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load i18n %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -23,27 +22,13 @@
           <a class='navbar-brand' href='{% url 'index' %}'>Boomerang API</a>
         </span>
         <ul class="nav navbar-nav pull-right">
-          {% if user.is_authenticated %}
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-user"></span>&nbsp;{{ user.username }}<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="{% url 'account_email' %}"><span class="glyphicon glyphicon-cog"></span>&nbsp;{% trans "Settings" %}</a></li>
-                <li><a href="{% url 'account_logout' %}"><span class="glyphicon glyphicon-log-out"></span>&nbsp;{% trans "Log Out" %}</a></li>
-              </ul>
-            </li>
-          {% else %}
-            <li><a href="{% url 'account_login' %}"><span class="glyphicon glyphicon-log-in"></span>&nbsp;{% trans "Log In" %}</a></li>
-            <li><a href="{% url 'account_signup' %}"><span class="glyphicon glyphicon-check"></span>&nbsp;{% trans "Sign Up" %}</a></li>
-          {% endif %}
+          {% include "profile.html" %}
         </ul>
       </div>
     </div>
 
     <div class="container">
-      {% if messages %}
-        {% for message in messages %}
-        {% endfor %}
-      {% endif %}
+      {% include "messages.html" %}
 
       {% block content %}
       {% endblock content %}
