--- a/templates/rest_framework/api.html
+++ b/templates/rest_framework/api.html
@@ -16,7 +16,7 @@
 {% endcomment %}
 
 {% block branding %}
-    <a class='navbar-brand' href='{% url 'index' %}'>Boomerang API</a>
+    {% include "navbrand.html" %}
 {% endblock %}
 
 {% block userlinks %}
